# tahoe

./: .env  .env.example  .gitignore  CLAUDE.md  CONFIG_MANAGEMENT.md  DOCKER_DEVELOPMENT.md  Dockerfile  MASTERPLAN.md  Makefile  README.md  claude_projects_info.md  docker-compose.yml  fix_agent_names.py  fix_session_service.py  fix_task_issues.py  masterplan.md  requirements.txt  roadmap.md  run_local.py  scrape_adk_docs.py  validation-report.md
services/agent-engine/: .dockerignore  .env.example  .gitignore  CODE_QUALITY_FOUNDATION.md  DATABASE_SECURITY_REFACTOR.md  DEV_UI_USAGE.md  Dockerfile  Dockerfile.dev-ui  LLM_PROVIDER_IMPLEMENTATION.md  Makefile  README.md  agent_service_architecture.md  agents.py  build.sh  docker-compose.dev-ui.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_integration_simple.py  test_lifecycle_manual.py  test_llm_provider.py
services/agent-engine/config/: __init__.py  settings.py
services/agent-engine/docs/: agent_implementation_spec.md  api_key_setup.md
services/agent-engine/examples/: basic_agent.py  tool_usage.py  workflow_agent.py
services/agent-engine/prisma/: schema.prisma
services/agent-engine/scripts/: adk_validation_report.json  generate_adk_agents.py  init_db.py  launch_dev_ui.py  launch_dev_ui_simple.py  seed.py  test_agent_discovery.py  test_aggregation.py  test_gemini.py  test_orchestration.py  validate_adk_patterns.py  validate_specifications.py  verify_adk.py
services/agent-engine/src/: auth.py  config.py  main.py  orchestrator.py
services/agent-engine/tests/: test_api.py  (+18 more)
(+361 files in other folders)
